--- a/src/app/components/welcome-page/welcome-page.component.html
+++ b/src/app/components/welcome-page/welcome-page.component.html
@@ -12,7 +12,7 @@
         <span class="self-center text-xl font-semibold whitespace-nowrap">Bulk</span><span class="self-center text-xl font-semibold whitespace-nowrap text-blue-700">Uploder</span>
       </a>
 
-      <div class="justify-between items-cente flex w-auto">
+      <div class="justify-between items-cente w-auto md:flex hidden">
         <ul class="flex mt-4 font-medium flex-row space-x-8">
           <li>
             <a href="https://radixweb.com/"
@@ -37,7 +37,7 @@
 </header>
 
 <div class="mx-auto max-w-7xl px-8 pb-16 text-center pt-40">
-  <h1 class="mx-auto max-w-4xl font-display text-5xl font-medium tracking-tight text-slate-900">
+  <h1 class="mx-auto max-w-4xl font-display md:text-5xl text-3xl font-medium tracking-tight text-slate-900">
     The Bulk Data Upload utility enables you to upload a large amount.
   </h1>
   <p class="mx-auto mt-6 text-lg tracking-tight text-slate-700">
