--- a/src/app/components/welcome-page/welcome-page.component.html
+++ b/src/app/components/welcome-page/welcome-page.component.html
@@ -52,5 +52,5 @@
 
 
 <div class="text-center align-bottom pt-40 text-sm text-gray-700">
-    Create by © 2023 Yash.Prajapati
+  Create by © 2023 <a href="https://www.linkedin.com/in/yash-prajapati-96b5151a1/?_l=en_US">Yash.Prajapati</a>
 </div>
