--- a/src/app/components/upload-csv/upload-csv.component.html
+++ b/src/app/components/upload-csv/upload-csv.component.html
@@ -10,7 +10,7 @@
     <a routerLink="/" class="text-white bg-blue-700 font-medium rounded-full text-sm px-4 py-2 mr-2 hover:shadow-sm hover:shadow-black">Go Back</a>
     <!-- <h3 class="text-white bg-red-700 font-medium rounded-full text-lg px-4 py-2 mr-2 ml-96">BulkUploder</h3> -->
   </div>
-  <div class="m-2 md:px-10 my-16 md:my-28 md:mx-36 md:w-4/5 flex-col md:flex border border-gray-300 shadow-lg shadow-black bg-white rounded-xl">
+  <div class="m-2 md:m-0 md:px-10 my-16 md:my-28 md:mx-36 md:w-4/5 flex-col md:flex md:flex-row border border-gray-300 shadow-lg shadow-black bg-white rounded-xl">
     <div class="md:w-1/2 p-2">
       <p class="text-xl px-5 py-1 font-medium tracking-tight">Bluk Create Data</p>
       <p class="text-sm px-5">Upload your data...</p>
